force-app/main/default/objects/Expense_Installment__c/Expense_Installment__c.object-meta.xml
<CustomObject>
    <description
  >Cuota de un consumo asignada a un mes. Una compra en 6 cuotas genera 6 registros.</description>
    <label>Expense Installment</label>
    <nameField>
        <displayFormat>CUOTA-{0000}</displayFormat>
        <label>Installment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Installments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>