force-app/main/default/objects/Expense_Installment__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>