force-app/main/default/objects/Expense_Installment__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>