force-app/main/default/objects/Expense_Installment__c/fields/Month_Start__c.field-meta.xml
<CustomField>
    <fullName>Month_Start__c</fullName>
    <description>Primer día del mes que paga esta cuota.</description>
    <label>Month Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>