force-app/main/default/objects/Expense_Installment__c/fields/Monthly_Budget__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Budget__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Presupuesto del mes en el que cae esta cuota.</description>
    <label>Monthly Budget</label>
    <referenceTo>Monthly_Budget__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Budget_Installments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>